# mini-cc-mini

./: .gitignore  README.md  pyproject.toml
.mini-cc/skills/ask-data/: README.md  SKILL.md
.mini-cc/skills/ask-data/references/: ehr-result-qa-metrics.md  ehr-result-qa-schema.md  ehr-result-qa-sql-templates.md  ehr-result-qa.md
.mini-cc/skills/ask-data/scripts/: ehr_api.py
mini_cc/: engine.py  llm.py  main.py  prompt.py  skills.py  tool.py  tools.py
